# Makefile.am
# Used by automake and configure to create Makefile.
#
# Copyright (C) 2005 Stefan Siegl <ssiegl@gmx.de>, Germany

SUBDIRS = 

lib_LTLIBRARIES = libfuse.la

libfuse_la_SOURCES = 	\
	fuse.h		\
	fuse_i.h	\
	main.c		\
	netfs.c		\
	netnode.c	\
	node.c

libfuse_la_LDFLAGS = -version-number 0:0:1
