# Makefile.am
# Used by automake and configure to create Makefile.
#
# Copyright (C) 2005,2006 Stefan Siegl <stesie@brokenpipe.de>, Germany

fuseincludedir=$(includedir)/fuse
fuseinclude_HEADERS = \
	fuse.h \
	fuse_opt.h \
	fuse_common.h \
	fuse_common_compat.h \
	fuse_compat.h \
	fuse_lowlevel.h \
	fuse_lowlevel_compat.h \
	cuse_lowlevel.h

include_HEADERS = old/fuse.h
